// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba del componente <GifGrid /> Compomente se debe renderizar correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__flipInY"
  >
    Hola Mundo
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Prueba del componente <GifGrid /> Debe mostrar items cuando carga imagenes useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__flipInY"
  >
    Hola Mundo
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="abv"
      key="abv"
      title="abc"
      url="http://localhost/cualquier/cosa.jpg"
    />
    <GifGridItem
      id="xyz"
      key="xyz"
      title="xyz"
      url="http://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
